Adding icons for page styles

--- a/configure.in
+++ b/configure.in
@@ -270,6 +270,9 @@ stylesheets/mal2html.xsl
 stylesheets/toc2html.xsl
 data/Makefile
 data/icons/Makefile
+data/icons/hicolor/Makefile
+data/icons/hicolor/16x16/Makefile
+data/icons/hicolor/16x16/status/Makefile
 data/ui/Makefile
 po/Makefile.in
 tests/Makefile
