Cleaning old cruft from git

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,12 @@
 .deps
 .dirstamp
 .libs
+Makefile
+Makefile.in
 
 /aclocal.m4
 /autom4te.cache/
+/compile
 /config.guess
 /config.h
 /config.h.in
@@ -28,12 +31,28 @@
 /intltool-merge.in
 /intltool-update.in
 /libtool
+/libyelp/stamp-yelp-marshal.h
+/libyelp/yelp-marshal.c
+/libyelp/yelp-marshal.h
+/libyelp/yelp-types.c
+/libyelp/yelp-types.h
 /ltmain.sh
+/m4
 /missing
+/mkinstalldirs
+/po/*.gmo
+/po/.intltool-merge-cache
+/po/Makefile.in.in
+/po/POTFILES
+/po/stamp-it
+/src/stamp-yelp-marshal.h
+/src/yelp
+/src/yelp-dbus.h
+/src/yelp-marshal.c
+/src/yelp-marshal.h
 /stamp-h1
-
+/stylesheets/db-title.xsl
+/stylesheets/db2html.xsl
+/stylesheets/mal2html.xsl
+/stylesheets/toc2html.xsl
 /tests/test-view
-
-Makefile.in
-Makefile
-
