--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -8,26 +8,34 @@ data/toc.xml.in
 [type: gettext/glade]data/ui/yelp-bookmarks-add.ui
 [type: gettext/glade]data/ui/yelp-open-location.ui
 [type: gettext/glade]data/ui/yelp-preferences.ui
-data/yelp.schemas.in
+libyelp/yelp-debug.c
+libyelp/yelp-docbook-document.c
+libyelp/yelp-document.c
+libyelp/yelp-error.c
+libyelp/yelp-io-channel.c
+libyelp/yelp-location-entry.c
+libyelp/yelp-mallard-document.c
+libyelp/yelp-marshal.c
+libyelp/yelp-settings.c
+libyelp/yelp-simple-document.c
+libyelp/yelp-transform.c
+libyelp/yelp-types.c
+libyelp/yelp-uri.c
+libyelp/yelp-view.c
 src/eggdesktopfile.c
 src/eggsmclient.c
+src/yelp-application.c
 src/yelp-base.c
 src/yelp-bookmarks.c
 src/yelp-db-print.c
-src/yelp-docbook.c
-src/yelp-document.c
 src/yelp-error.c
 src/yelp-info.c
-src/yelp-io-channel.c
 src/yelp-main.c
-src/yelp-mallard.c
 src/yelp-man.c
 src/yelp-page.c
 src/yelp-print.c
 src/yelp-search-parser.c
 src/yelp-search.c
-src/yelp-settings.c
 src/yelp-toc.c
-src/yelp-transform.c
 src/yelp-window.c
 yelp.desktop.in.in
