Highlight #anchor sections for DocBook documents as well as Mallard
This doesn't work with embedded <anchor> tags, or links to anything
except sections. Might be worthwhile to make the JavaScript a bit
smarter about DOM traversal.

--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,5 @@ Makefile.in
 /stylesheets/db2html.xsl
 /stylesheets/mal2html.xsl
 /stylesheets/toc2html.xsl
+/stylesheets/yelp-common.xsl
 /tests/test-view
