--- a/configure.in
+++ b/configure.in
@@ -268,6 +268,7 @@ stylesheets/db2html.xsl
 stylesheets/db-title.xsl
 stylesheets/mal2html.xsl
 stylesheets/toc2html.xsl
+stylesheets/yelp-common.xsl
 data/Makefile
 data/icons/Makefile
 data/icons/hicolor/Makefile
