--- a/stylesheets/Makefile.am
+++ b/stylesheets/Makefile.am
@@ -12,4 +12,4 @@ xsl_DATA =		\
 	toc2html.xsl	\
 	yelp-common.xsl
 
-EXTRA_DIST=$(xsl_DATA) db2html.xsl.in db-title.xsl.in mal2html.xsl.in toc2html.xsl.in
+EXTRA_DIST=$(xsl_DATA) db2html.xsl.in db-title.xsl.in mal2html.xsl.in toc2html.xsl.in yelp-common.xsl.in
