--- a/stylesheets/yelp-common.xsl.in
+++ b/stylesheets/yelp-common.xsl.in
@@ -48,4 +48,28 @@ div.body {
 </xsl:text>
 </xsl:template>
 
+<xsl:template name="yelp.common.javascript">
+<script type="text/javascript" language="javascript" src="@DATADIR@/jquery-1.4.2.min.js"/>
+<script type="text/javascript" language="javascript" src="@DATADIR@/jquery-ui-1.8.custom.min.js"/>
+<script type="text/javascript" language="javascript">
+<xsl:text>
+$(document).ready (function () {
+  if (location.hash != '') {
+    $('#' + location.hash).find('div.header').css({
+      backgroundColor: '</xsl:text><xsl:value-of select="$theme.color.yellow_background"/><xsl:text>'
+    }).animate({
+      backgroundColor: '</xsl:text><xsl:value-of select="$theme.color.gray_background"/><xsl:text>'
+    }, 8000);
+    $('#' + location.hash).css({
+      backgroundColor: '</xsl:text><xsl:value-of select="$theme.color.yellow_background"/><xsl:text>'
+    }).animate({
+      backgroundColor: '</xsl:text><xsl:value-of select="$theme.color.background"/><xsl:text>'
+    }, 4000);
+  }
+});
+</xsl:text>
+</script>
+</xsl:template>
+
+
 </xsl:stylesheet>
