--- a/configure.in
+++ b/configure.in
@@ -50,7 +50,7 @@ AM_GLIB_DEFINE_LOCALEDIR([GNOMELOCALEDIR])
 
 PKG_CHECK_MODULES(YELP,
 [
-	gio-2.0
+	gio-2.0 >= 2.25.2
 	gio-unix-2.0
 	gtk+-unix-print-2.0
 	gtk+-2.0 >= 2.16.0
@@ -78,6 +78,8 @@ AC_SUBST([YELP_CFLAGS])
 AC_SUBST([YELP_LIBS])
 
 AC_PATH_PROGS(SED, gsed sed)
+
+AM_GSETTINGS
 
 XSL_PATH="`$PKG_CONFIG --variable=xsltdir yelp-xsl`"
 XSL_DB_TITLE="$XSLT_PATH""/docbook/common/db-title.xsl"
