--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
-AC_INIT([Yelp],[2.27.4],[http://bugzilla.gnome.org/enter_bug.cgi?product=yelp],[yelp])
+AC_INIT([Yelp],[2.31.1],[http://bugzilla.gnome.org/enter_bug.cgi?product=yelp],[yelp])
 
-AC_CONFIG_SRCDIR([src/yelp-main.c])
+AC_CONFIG_SRCDIR([src/yelp.c])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 
