Build fixed for gtk docs

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
 
-SUBDIRS = libyelp src stylesheets po data tests
+SUBDIRS = libyelp src stylesheets po data tests docs
 
 @INTLTOOL_DESKTOP_RULE@
 
