--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -12,18 +12,30 @@ YELP_COMMON_LDADD =				\
 	$(top_builddir)/libyelp/libyelp.la
 
 check_PROGRAMS =				\
+	test-bz2				\
 	test-io-channel				\
 	test-location-entry			\
+	test-lzma				\
+	test-magic				\
 	test-settings				\
 	test-transform				\
 	test-uri				\
 	test-view
+
+test_bz2_CFLAGS = $(YELP_COMMON_CFLAGS)
+test_bz2_LDADD = $(YELP_COMMON_LDADD)
 
 test_io_channel_CFLAGS = $(YELP_COMMON_CFLAGS)
 test_io_channel_LDADD = $(YELP_COMMON_LDADD)
 
 test_location_entry_CFLAGS = $(YELP_COMMON_CFLAGS)
 test_location_entry_LDADD = $(YELP_COMMON_LDADD)
+
+test_lzma_CFLAGS = $(YELP_COMMON_CFLAGS)
+test_lzma_LDADD = $(YELP_COMMON_LDADD)
+
+test_magic_CFLAGS = $(YELP_COMMON_CFLAGS)
+test_magic_LDADD = $(YELP_COMMON_LDADD)
 
 test_settings_CFLAGS = $(YELP_COMMON_CFLAGS)
 test_settings_LDADD = $(YELP_COMMON_LDADD)
