--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,12 +4,15 @@
 data/info.xml.in
 data/man.xml.in
 data/toc.xml.in
+libyelp/yelp-bz2-decompressor.c
 libyelp/yelp-debug.c
 libyelp/yelp-docbook-document.c
 libyelp/yelp-document.c
 libyelp/yelp-error.c
 libyelp/yelp-io-channel.c
 libyelp/yelp-location-entry.c
+libyelp/yelp-lzma-decompressor.c
+libyelp/yelp-magic-decompressor.c
 libyelp/yelp-mallard-document.c
 libyelp/yelp-marshal.c
 libyelp/yelp-settings.c
