Updates to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,36 @@ Makefile.in
 /config.status
 /config.sub
 /configure
+/data/gsettings_schema_validate_stamp
+/data/info.xml
+/data/man.xml
+/data/toc.xml
 /depcomp
+/docs/libyelp/html-build.stamp
+/docs/libyelp/html.stamp
+/docs/libyelp/html/
+/docs/libyelp/libyelp-decl-list.txt
+/docs/libyelp/libyelp-decl.txt
+/docs/libyelp/libyelp-overrides.txt
+/docs/libyelp/libyelp-sections.txt
+/docs/libyelp/libyelp-undeclared.txt
+/docs/libyelp/libyelp-undocumented.txt
+/docs/libyelp/libyelp-unused.txt
+/docs/libyelp/libyelp.args
+/docs/libyelp/libyelp.hierarchy
+/docs/libyelp/libyelp.interfaces
+/docs/libyelp/libyelp.prerequisites
+/docs/libyelp/libyelp.signals
+/docs/libyelp/libyelp.types
+/docs/libyelp/scan-build.stamp
+/docs/libyelp/sgml-build.stamp
+/docs/libyelp/sgml.stamp
+/docs/libyelp/tmpl-build.stamp
+/docs/libyelp/tmpl.stamp
+/docs/libyelp/tmpl/
+/docs/libyelp/version.xml
+/docs/libyelp/xml/
+/gtk-doc.make
 /install-sh
 /intltool-extract.in
 /intltool-merge.in
@@ -43,8 +72,12 @@ Makefile.in
 /po/*.gmo
 /po/.intltool-merge-cache
 /po/Makefile.in.in
+/po/missing
 /po/POTFILES
 /po/stamp-it
+/po/yelp.pot
+/src/client-bindings.h
+/src/server-bindings.h
 /src/stamp-yelp-marshal.h
 /src/yelp
 /src/yelp-dbus.h
@@ -56,4 +89,14 @@ Makefile.in
 /stylesheets/mal2html.xsl
 /stylesheets/toc2html.xsl
 /stylesheets/yelp-common.xsl
+/tests/test-bz2
+/tests/test-io-channel
+/tests/test-location-entry
+/tests/test-lzma
+/tests/test-magic
+/tests/test-settings
+/tests/test-transform
+/tests/test-uri
 /tests/test-view
+/yelp.desktop
+/yelp.desktop.in
