[info2html.xsl] Using common CSS for info documents

--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,7 @@ Makefile.in
 /stamp-h1
 /stylesheets/db-title.xsl
 /stylesheets/db2html.xsl
+/stylesheets/info2html.xsl
 /stylesheets/mal2html.xsl
 /stylesheets/toc2html.xsl
 /stylesheets/yelp-common.xsl
