--- a/configure.in
+++ b/configure.in
@@ -91,6 +91,13 @@ AC_SUBST(XSL_DB2XHTML)
 XSL_MAL2XHTML="`$PKG_CONFIG --variable=mal2xhtml yelp-xsl`"
 AC_SUBST(XSL_MAL2XHTML)
 
+XSL_THEME_COLORS="`$PKG_CONFIG --variable=xsltdir yelp-xsl`/theme/theme-colors.xsl"
+AC_SUBST(XSL_THEME_COLORS)
+XSL_THEME_ICONS="`$PKG_CONFIG --variable=xsltdir yelp-xsl`/theme/theme-icons.xsl"
+AC_SUBST(XSL_THEME_ICONS)
+XSL_THEME_HTML="`$PKG_CONFIG --variable=xsltdir yelp-xsl`/theme/theme-html.xsl"
+AC_SUBST(XSL_THEME_HTML)
+
 XSL_GETTEXT="`$PKG_CONFIG --variable=gettext yelp-xsl`"
 AC_SUBST(XSL_GETTEXT)
 
@@ -268,6 +275,7 @@ src/Makefile
 stylesheets/Makefile
 stylesheets/db2html.xsl
 stylesheets/db-title.xsl
+stylesheets/info2html.xsl
 stylesheets/mal2html.xsl
 stylesheets/toc2html.xsl
 stylesheets/yelp-common.xsl
