--- a/stylesheets/info2html.xsl.in
+++ b/stylesheets/info2html.xsl.in
@@ -12,6 +12,20 @@
 <xsl:import href="@XSL_THEME_HTML@"/>
 <xsl:include href="yelp-common.xsl"/>
 
+<xsl:template name="linktrails">
+  <xsl:param name="up" select="@up"/>
+  <xsl:variable name="upnode" select="/Info//Section[@id = $up]"/>
+  <xsl:if test="$upnode/@up">
+    <xsl:call-template name="linktrails">
+      <xsl:with-param name="up" select="$upnode/@up"/>
+    </xsl:call-template>
+  </xsl:if>
+  <a href="xref:{$upnode/@id}">
+    <xsl:value-of select="$upnode/@name"/>
+  </a>
+  <xsl:text>&#x00A0;» </xsl:text>
+</xsl:template>
+
 <xsl:template match="/Info">
   <xsl:apply-templates select="Section"/>
 </xsl:template>
@@ -28,7 +42,15 @@
         </style>
       </head>
       <body>
-        <div class="head"/>
+        <div class="head">
+          <xsl:if test="@up">
+            <div class="trails">
+              <div class="trail">
+                <xsl:call-template name="linktrails"/>
+              </div>
+            </div>
+          </xsl:if>
+        </div>
         <div class="body">
           <xsl:apply-templates select="node()[not(self::Section)]"/>
         </div>
