--- a/configure.in
+++ b/configure.in
@@ -1,51 +1,30 @@
+AC_PREREQ([2.63])
 AC_INIT([Yelp],[2.31.2],[http://bugzilla.gnome.org/enter_bug.cgi?product=yelp],[yelp])
 
 AC_CONFIG_SRCDIR([src/yelp.c])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 
-AM_INIT_AUTOMAKE([1.9 dist-bzip2 no-dist-gzip])
-AM_MAINTAINER_MODE
+AM_INIT_AUTOMAKE([1.11 dist-bzip2 no-dist-gzip])
+AM_MAINTAINER_MODE([enable])
 
-AC_PROG_LN_S
+AM_SILENT_RULES([yes])
+
+# Check for programs
 AC_PROG_CC
-AM_PROG_CC_STDC
-AC_ISC_POSIX
-AC_HEADER_STDC
-AM_PROG_LIBTOOL
+AC_PROG_CC_C_O
+AC_PROG_LN_S
+
+# Initialize libtool
+LT_PREREQ([2.2.6])
+LT_INIT
+
+AC_PATH_PROGS(SED, gsed sed)
+
 AM_PATH_GLIB_2_0
-AM_PROG_CC_C_O
+GLIB_GSETTINGS
 
-IT_PROG_INTLTOOL([0.35.0])
-
-GTK_DOC_CHECK(1.9)
-
-GNOME_DEBUG_CHECK
-GNOME_COMPILE_WARNINGS([maximum])
-GNOME_MAINTAINER_MODE_DEFINES
-
-MORE_WARN_FLAGS=
-DEPRECATION_FLAGS=
-
-if test "x$enable_debug" = "xyes"; then
-	AC_DEFINE([YELP_DEBUG],[1],[Enable Yelp debugging])
-	AM_CFLAGS="$AM_CFLAGS -pedantic -ansi"
-fi
-
-dnl NOTE : it appears that some systems do not like it when you use line
-dnl        continuation charactes to split CFLAGS into readable chunks
-if test "x$GCC" = "xyes"; then
-   AM_CFLAGS="$AM_CFLAGS -Wall -Wno-uninitialized -Wmissing-prototypes -Wnested-externs -Wpointer-arith -Wno-sign-compare"
-fi
-
-GETTEXT_PACKAGE=yelp
-AC_SUBST(GETTEXT_PACKAGE)
-AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",
-                   [The gettext translation domain])
-
-AM_GLIB_GNU_GETTEXT
-AM_GLIB_DEFINE_LOCALEDIR([GNOMELOCALEDIR])
-
+# Library dependecies
 PKG_CHECK_MODULES(YELP,
 [
 	gio-2.0 >= 2.25.3
@@ -59,6 +38,38 @@ PKG_CHECK_MODULES(YELP,
 	webkit-1.0 >= 1.1.15
 	yelp-xsl
 ])
+AC_SUBST([YELP_CFLAGS])
+AC_SUBST([YELP_LIBS])
+
+
+GNOME_DEBUG_CHECK
+GNOME_COMPILE_WARNINGS([maximum])
+GNOME_MAINTAINER_MODE_DEFINES
+
+MORE_WARN_FLAGS=
+
+if test "x$enable_debug" = "xyes"; then
+	AC_DEFINE([YELP_DEBUG],[1],[Enable Yelp debugging])
+	AM_CFLAGS="$AM_CFLAGS -pedantic -ansi"
+fi
+
+dnl NOTE : it appears that some systems do not like it when you use line
+dnl        continuation charactes to split CFLAGS into readable chunks
+if test "x$GCC" = "xyes"; then
+   AM_CFLAGS="$AM_CFLAGS -Wall -Wno-uninitialized -Wmissing-prototypes -Wnested-externs -Wpointer-arith -Wno-sign-compare"
+fi
+
+# i18n stuff
+IT_PROG_INTLTOOL([0.41.0])
+
+GETTEXT_PACKAGE=yelp
+AC_SUBST(GETTEXT_PACKAGE)
+AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",
+                   [The gettext translation domain])
+
+AM_GLIB_GNU_GETTEXT
+AM_GLIB_DEFINE_LOCALEDIR([GNOMELOCALEDIR])
+
 
 AC_ARG_ENABLE(lzma,
 	AS_HELP_STRING([--enable-lzma],[Enable lzma decoder support [[default=yes]]]),
@@ -109,9 +120,6 @@ DATADIR=`(
 )`
 AC_SUBST([DATADIR])
 
-AC_PATH_PROGS(SED, gsed sed)
-
-GLIB_GSETTINGS
 
 XSL_PATH="`$PKG_CONFIG --variable=xsltdir yelp-xsl`"
 XSL_DB_TITLE="$XSLT_PATH""/docbook/common/db-title.xsl"
@@ -206,6 +214,8 @@ AM_CFLAGS="$AM_CFLAGS $WARN_CFLAGS $MORE_WARN_FLAGS"
 AC_SUBST([AM_CPPFLAGS])
 AC_SUBST([AM_CFLAGS])
 AC_SUBST([AM_LDFLAGS])
+
+GTK_DOC_CHECK([1.13],[--flavour no-tmpl])
 
 AC_CONFIG_FILES([
 Makefile
