--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -6,33 +6,34 @@ YELP_COMMON_CFLAGS =				\
 	-I$(top_srcdir)/libyelp
 YELP_COMMON_LDADD =				\
 	$(YELP_LIBS)				\
-	$(Z_LIBS)				\
-	$(BZ_LIBS)				\
-	$(LZMADEC_LIBS)				\
 	$(top_builddir)/libyelp/libyelp.la
 
 check_PROGRAMS =				\
-	test-bz2				\
 	test-io-channel				\
 	test-location-entry			\
-	test-lzma				\
 	test-magic				\
 	test-settings				\
 	test-transform				\
 	test-uri				\
 	test-view
 
+if ENABLE_LZMA
+check_PROGRAMS += test-lzma
+test_lzma_CFLAGS = $(YELP_COMMON_CFLAGS)
+test_lzma_LDADD = $(YELP_COMMON_LDADD)
+endif
+
+if ENABLE_BZ2
+check_PROGRAMS += test-bz2
 test_bz2_CFLAGS = $(YELP_COMMON_CFLAGS)
 test_bz2_LDADD = $(YELP_COMMON_LDADD)
+endif
 
 test_io_channel_CFLAGS = $(YELP_COMMON_CFLAGS)
 test_io_channel_LDADD = $(YELP_COMMON_LDADD)
 
 test_location_entry_CFLAGS = $(YELP_COMMON_CFLAGS)
 test_location_entry_LDADD = $(YELP_COMMON_LDADD)
-
-test_lzma_CFLAGS = $(YELP_COMMON_CFLAGS)
-test_lzma_LDADD = $(YELP_COMMON_LDADD)
 
 test_magic_CFLAGS = $(YELP_COMMON_CFLAGS)
 test_magic_LDADD = $(YELP_COMMON_LDADD)
