[yelp-location-entry] Enable location entry bookmarks + markers in history

--- a/data/icons/hicolor/16x16/status/Makefile.am
+++ b/data/icons/hicolor/16x16/status/Makefile.am
@@ -1,6 +1,7 @@
 icondir = $(datadir)/yelp/icons/hicolor/16x16/status
 
 icon_DATA = 				\
+	bookmark.png			\
 	yelp-page-task.png		\
 	yelp-page-tip.png		\
 	yelp-page-ui.png		\
