--- a/stylesheets/man2html.xsl.in
+++ b/stylesheets/man2html.xsl.in
@@ -6,86 +6,40 @@
                 extension-element-prefixes="yelp"
                 version="1.0">
 
-<xsl:output method="html" encoding="UTF-8"/>
-
+<xsl:import href="@XSL_GETTEXT@"/>
+<xsl:import href="@XSL_COLOR@"/>
+<xsl:import href="@XSL_ICONS@"/>
+<xsl:import href="@XSL_HTML@"/>
 <xsl:include href="yelp-common.xsl"/>
 
-<xsl:param name="stylesheet_path" select="''"/>
-<xsl:param name="linktrail"/>
+<xsl:param name="html.basename" select="'//index'"/>
 
-<xsl:param name="yelp.javascript"/>
+<xsl:param name="linktrail" select="''"/>
 
-<xsl:param name="yelp.icon.blockquote"/>
-<xsl:param name="yelp.icon.caution"/>
-<xsl:param name="yelp.icon.important"/>
-<xsl:param name="yelp.icon.note"/>
-<xsl:param name="yelp.icon.programlisting"/>
-<xsl:param name="yelp.icon.tip"/>
-<xsl:param name="yelp.icon.warning"/>
-
-<xsl:param name="theme.color.text"/>
-<xsl:param name="theme.color.background"/>
-<xsl:param name="theme.color.text_light"/>
-<xsl:param name="theme.color.link"/>
-<xsl:param name="theme.color.link_visited"/>
-<xsl:param name="theme.color.gray_background"/>
-<xsl:param name="theme.color.gray_border"/>
-<xsl:param name="theme.color.blue_background"/>
-<xsl:param name="theme.color.blue_border"/>
-<xsl:param name="theme.color.red_background"/>
-<xsl:param name="theme.color.red_border"/>
-<xsl:param name="theme.color.yellow_background"/>
-<xsl:param name="theme.color.yellow_border"/>
-
-<xsl:template match="Man">
-  <xsl:choose>
-    <xsl:when test="element-available('yelp:document')">
-      <yelp:document href="index">
-        <xsl:call-template name="html"/>
-      </yelp:document>
-    </xsl:when>
-    <xsl:otherwise>
-      <xsl:call-template name="html"/>
-    </xsl:otherwise>
-  </xsl:choose>
+<xsl:template mode="html.title.mode" match="Man">
+  <xsl:value-of select="//TH/Title"/>
 </xsl:template>
 
-<xsl:template name="html">
-  <html>
-    <head>
-      <title>
-        <xsl:value-of select="//TH/Title"/>
-      </title>
-      <style type="text/css">
-        <xsl:call-template name="html.css"/>
-      </style>
-      <script type="text/javascript">
-        <xsl:attribute name="src">
-          <xsl:value-of select="concat('file://', $yelp.javascript)"/>
-        </xsl:attribute>
-      </script>
-    </head>
-    <body>
-      <xsl:call-template name="html.linktrail"/>
-      <div class="body">
-        <xsl:apply-templates select="TH"/>
-        <xsl:apply-templates select="SH"/>
-      </div>
-    </body>
-  </html>
+<xsl:template mode="html.css.mode" match="Man">
+  <xsl:param name="direction"/>
+  <xsl:param name="left"/>
+  <xsl:param name="right"/>
+<xsl:text>
+body { font-family: monospace; }
+div.SH { margin-</xsl:text><xsl:value-of select="$left"/><xsl:text>: 1.2em; }
+div.SS { margin-</xsl:text><xsl:value-of select="$left"/><xsl:text>: 1.6em; }
+span.Section { margin-</xsl:text><xsl:value-of select="$left"/><xsl:text>: 0.4em; }
+dd { padding-bottom: 10px; }
+</xsl:text>
 </xsl:template>
 
-<xsl:template name="html.css">
-  <xsl:call-template name="yelp.common.css"/>
-  <xsl:text>
-    div[class~="SH"] { margin-left: 1.2em; }
-    div[class~="SS"] { margin-left: 1.6em; }
+<xsl:template mode="html.header.mode" match="Man">
+  <xsl:call-template name="html.linktrail"/>
+</xsl:template>
 
-    span[class~="R"] { font-family: serif; }
-    span[class~="Section"] { margin-left: 0.4em; }
-  
-    dd { padding-bottom: 10px; }
-  </xsl:text>
+<xsl:template mode="html.body.mode" match="Man">
+  <xsl:apply-templates select="TH"/>
+  <xsl:apply-templates select="SH"/>
 </xsl:template>
 
 <xsl:template name="html.linktrail">
