--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -14,6 +14,7 @@ libyelp/yelp-location-entry.c
 libyelp/yelp-lzma-decompressor.c
 libyelp/yelp-magic-decompressor.c
 libyelp/yelp-mallard-document.c
+libyelp/yelp-man-document.c
 libyelp/yelp-settings.c
 libyelp/yelp-simple-document.c
 libyelp/yelp-transform.c
