--- a/stylesheets/yelp-common.xsl.in
+++ b/stylesheets/yelp-common.xsl.in
@@ -89,7 +89,7 @@ div.body {
 <xsl:text>
 $(document).ready (function () {
   if (location.hash != '') {
-    $('#' + location.hash).find('div.header').css({
+    $('#' + location.hash).find('div.hgroup').css({
       backgroundColor: '</xsl:text><xsl:value-of select="$color.yellow_background"/><xsl:text>'
     }).animate({
       backgroundColor: '</xsl:text><xsl:value-of select="$color.gray_background"/><xsl:text>'
