--- a/stylesheets/db2html.xsl.in
+++ b/stylesheets/db2html.xsl.in
@@ -17,7 +17,24 @@
 <!-- == db.xref.target == -->
 <xsl:template name="db.xref.target">
   <xsl:param name="linkend"/>
-  <xsl:value-of select="concat('xref:', $linkend, '#', $linkend)"/>
+  <xsl:param name="target" select="key('idkey', $linkend)"/>
+  <xsl:param name="is_chunk" select="false()"/>
+  <xsl:choose>
+    <xsl:when test="$is_chunk">
+      <xsl:value-of select="concat('xref:', $linkend)"/>
+    </xsl:when>
+    <xsl:otherwise>
+      <xsl:variable name="target_chunk_id">
+        <xsl:call-template name="db.chunk.chunk-id">
+          <xsl:with-param name="node" select="$target"/>
+        </xsl:call-template>
+      </xsl:variable>
+      <xsl:value-of select="concat('xref:', $target_chunk_id)"/>
+      <xsl:if test="$target_chunk_id != $linkend">
+        <xsl:value-of select="concat('#', $linkend)"/>
+      </xsl:if>
+    </xsl:otherwise>
+  </xsl:choose>
 </xsl:template>
 
 <!-- == db2html.division.head.extra == -->
